# Project-Group-45

./: .gitignore  README.md  main.py  pyproject.toml
urdu_digits/: __init__.py  dataloader.py  dataset.py  model.py  train_evaluate.py
